<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/refresh_id"
        android:title="@string/refresh"
        android:showAsAction="ifRoom" />
</menu>